# cpp_modern_development_yellow_belt

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/database/: CMakeLists.txt  condition_parser.cpp  condition_parser.h  condition_parser_test.cpp  database.cpp  database.h  date.cpp  date.h  main.cpp  node.cpp  node.h  token.cpp  token.h
src/test_runner/: CMakeLists.txt  test_runner.cpp  test_runner.h
src/tests/: CMakeLists.txt  tests.cpp  tests.hpp
src/week_1/: CMakeLists.txt
src/week_1/avg_temperature/: CMakeLists.txt  main.cpp
src/week_1/blocks_weight/: CMakeLists.txt  main.cpp
src/week_1/element_reference/: CMakeLists.txt  main.cpp
src/week_1/matrix_sum/: CMakeLists.txt  main.cpp
src/week_1/regions/: CMakeLists.txt  main.cpp
src/week_1/square/: CMakeLists.txt  main.cpp
src/week_1/startrack/: CMakeLists.txt  main.cpp
src/week_2/: CMakeLists.txt
src/week_2/bus_stops/: CMakeLists.txt  correct.cpp  starter.cpp
src/week_2/equation/: CMakeLists.txt  equation.cpp
src/week_2/palindrome/: CMakeLists.txt  palindrome.cpp
src/week_2/person/: CMakeLists.txt  person.cpp
src/week_2/rational/: CMakeLists.txt  rational.cpp
src/week_3/: CMakeLists.txt
src/week_3/phone_number/: CMakeLists.txt  phone_number.cpp  phone_number.h  phone_number_test.cpp
src/week_4/: CMakeLists.txt
src/week_4/merge_sort/: CMakeLists.txt  by_three_test.cpp  by_two_test.cpp  merge_by_three.cpp  merge_by_two.cpp
src/week_4/set_part/: CMakeLists.txt  main_test.cpp  set_part.cpp
src/week_5/: CMakeLists.txt
(+35 files in other folders)
